# fw-core-lib

./: CMakeLists.txt  README.md
Inc/bsp/: button.h  led.h  output.h  rtc.h
Inc/core/: cli.h  fault.h  simple-timer.h  ticker.h  uprint.h
Inc/interface/: interface.h
Inc/shared/: pool.h  ring-buffer.h  slist.h
Src/bsp/: button.c  led.c  output.c  rtc.c
Src/core/: cli.c  fault.c  simple-timer.c  ticker.c  uprint.c
Src/shared/: pool.c  ring-buffer.c  slist.c
Tests/: AllTestRunner.cpp  Makefile
Tests/mocks/: mock_comm.c  mock_interface_io.c  mock_interface_io.h  mock_timebase.c  mock_timebase.h
Tests/unit/bsp/: test_led.cpp
Tests/unit/core/: test_simple_timer.cpp
Tests/unit/shared/: test_pool.c  test_pool.cpp  test_ring_buffer.cpp  test_slist.cpp
